--- a/week3/Exercise 3a - Solution Proposal.ipynb
+++ b/week3/Exercise 3a - Solution Proposal.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c1cf08be",
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-8935fcd68ba1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#Q1: Output the first three rows in sorted_df and df respectively\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# here output first three of df\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#Q1: Output the first three rows in sorted_df and df respectively\n",
     "# here output first three of df\n",
@@ -15,7 +26,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c78cfc68",
    "metadata": {
     "scrolled": true
    },
@@ -28,7 +38,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abecf194",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +49,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2d31c34",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -51,18 +59,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.8"
   }
  },
  "nbformat": 4,
